feat: add ul with img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <title>infinite slider</title>
 </head>
 <body>
+    <header>
+
+    </header>
+    <main>
+<div class="container">
+    <ul>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+        <li>
+            <div><img src="" alt=""></div>
+        </li>
+    </ul>
+</div>
+    </main>
+    <footer>
+
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
