feat: add class img-block

--- a/index.html
+++ b/index.html
@@ -12,44 +12,44 @@
     </header>
     <main>
 <div class="container">
-    <ul>
+    <ul class="slider">
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/nature-more-bereg-kamni-skali-volni-147005.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/korally-more-ryby-zhivotnye-21783.jpeg" alt="korally" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/more-pejzazh-plyazh-priroda-44487.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/more-pejzazh-priroda-46891.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/nature-pirs-zakat-luchi-gorizont-more-147634.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/nature-skali-kamni-more-vid_sverkhu-poberezhe-150829.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/animals-ribi-staya-more-melkovode-154575.jpeg" alt="fishes" width="500" height="400">
             </div>
         </li>
         <li>
-            <div>
+            <div class="img-block">
                 <img src="./assets/img/nature-tailand-tropiki-more-lodki-skali-53022.jpeg" alt="sea" width="500" height="400">
             </div>
         </li>
