feat: add arrow-btn and styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
 <div class="container">
+    <button class="arrow-button prev-btn">&lt;</button>
     <ul class="slider">
         <li class="slider-item">
             <div class="img-block">
@@ -54,6 +55,7 @@
             </div>
         </li>
     </ul>
+    <button class="arrow-button next-btn">&gt;</button>
 </div>
     </main>
     <footer>
