--- a/index.html
+++ b/index.html
@@ -1,75 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>infinite slider</title>
-</head>
-<body>
-    <header>
-       <h1 class="title">Infinite slider</h1>
-    </header>
-    <main>
-<div class="container">
-    <button class="arrow-button prev-btn">&lt;</button>
-    <ul class="slider">
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/nature-more-bereg-kamni-skali-volni-147005.jpeg" alt="sea" width="500" height="400">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>infinite slider</title>
+    </head>
+    <body>
+        <header>
+            <h1 class="title">Infinite slider</h1>
+        </header>
+        <main>
+            <button class="arrow-button prev-btn">&lt;</button>
+            <div class="container">
+                <ul class="slider">
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/nature-more-bereg-kamni-skali-volni-147005.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            >
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/korally-more-ryby-zhivotnye-21783.jpeg"
+                                alt="korally"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/more-pejzazh-plyazh-priroda-44487.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/more-pejzazh-priroda-46891.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/nature-pirs-zakat-luchi-gorizont-more-147634.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/nature-skali-kamni-more-vid_sverkhu-poberezhe-150829.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/animals-ribi-staya-more-melkovode-154575.jpeg"
+                                alt="fishes"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="img-block">
+                            <img
+                                src="./assets/img/nature-tailand-tropiki-more-lodki-skali-53022.jpeg"
+                                alt="sea"
+                                width="500"
+                                height="400"
+                            />
+                        </div>
+                    </li>
+                </ul>
             </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/korally-more-ryby-zhivotnye-21783.jpeg" alt="korally" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/more-pejzazh-plyazh-priroda-44487.jpeg" alt="sea" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/more-pejzazh-priroda-46891.jpeg" alt="sea" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/nature-pirs-zakat-luchi-gorizont-more-147634.jpeg" alt="sea" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/nature-skali-kamni-more-vid_sverkhu-poberezhe-150829.jpeg" alt="sea" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/animals-ribi-staya-more-melkovode-154575.jpeg" alt="fishes" width="500" height="400">
-            </div>
-        </li>
-        <li class="slider-item">
-            <div class="img-block">
-                <img src="./assets/img/nature-tailand-tropiki-more-lodki-skali-53022.jpeg" alt="sea" width="500" height="400">
-            </div>
-        </li>
-    </ul>
-    <button class="arrow-button next-btn">&gt;</button>
-</div>
-    </main>
-    <footer>
-        <a href="https://github.com/Yana-Dyachok" target="_blank">
-            <img
-              class="github-icon"
-              src=""
-              alt="github"
-              width="50"
-              height="50"
-            >
-        </a>
-        <p class="author">Created by Kukharets</p>
-    </footer>
-    <script src="./index.js"></script>
-</body>
+            <button class="arrow-button next-btn">&gt;</button>
+        </main>
+        <footer>
+            <a href="https://github.com/Yana-Dyachok" target="_blank">
+                <img
+                    class="github-icon"
+                    src=""
+                    alt="github"
+                    width="50"
+                    height="50"
+                />
+            </a>
+            <p class="author">Created by Kukharets</p>
+        </footer>
+        <script src="./index.js"></script>
+    </body>
 </html>
