feat: add a link for github svg

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a href="https://github.com/Yana-Dyachok" target="_blank">
                 <img
                     class="github-icon"
-                    src=""
+                    src="./assets/github_logo_icon_147285.svg"
                     alt="github"
                     width="50"
                     height="50"
